# peru-dnie

./: .gitignore  LICENSE  Makefile  README.md  lefthook.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: release.yaml  tests.yml
src/peru_dnie/: apdu.py  card.py  card_init.py  cli.py  cli_config.py  constants.py  context.py  exceptions.py  hashes.py  i18n.py  pyscard.py  read_certs.py
src/peru_dnie/commands/: certificate.py  general.py  signature.py
tests/: conftest.py
tests/unit/: test_hashes.py
tests/unit/commands/: test_signature.py
